# personif.ai

./: .gitignore  JSONBIN_SETUP.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: conversation.json  enroll_voice.py  generate.py  json_voice_assistant.py  live_transcription.json  main.py  package-lock.json  package.json  pyproject.toml  realtime_voice_assistant.py  requirements.txt  simple_api.py  super_buffered_assistant.py  test_integration.py  test_speaker_recognition.py  tsconfig.json  user_voice_profile.npy  voice.py  voice_assistant.py
backend/pretrained_models/spkrec/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
backend/services/: audio_chunking_service.py  jsonbin_service.py  speaker_service.py  transcript_service.py
backend/src/: server.ts
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/personifications/: route.ts
frontend/src/app/api/personifications/active/: route.ts
frontend/src/components/: delete-confirmation-dialog.tsx  edit-personification-dialog.tsx  new-personification-dialog.tsx  personification-card.tsx  sidebar.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: api.ts  mock-data.ts
frontend/src/pages/: personifications-page.tsx  settings-page.tsx
frontend/types/: personification.ts
harvey-earbuds/: .gitignore  SECURITY_NOTICE.md  package-lock.json  package.json  server.js
harvey-earbuds/.claude/: settings.local.json
scripts/: generate.py  pyproject.toml  requirements.txt  voice.py
