[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Ferreira",email = "evanjfer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai[extras] (>=0.43.1,<0.44.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
