[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Ferreira",email = "evanjfer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai[extras] (>=0.43.1,<0.44.0)",
    "speechbrain (==1.0.2)",
    "soundfile (==0.12.1)",
    "sounddevice (==0.4.6)",
    "numpy (>=2.3.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
