[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Ferreira",email = "evanjfer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "assemblyai[extras] (>=0.43.1,<0.44.0)",
    "speechbrain (==1.0.2)",
    "soundfile (==0.12.1)",
    "sounddevice (==0.4.6)",
    "numpy (>=2.3.3,<3.0.0)",
    "cerebras-cloud-sdk (>=1.50.1,<2.0.0)",
    "elevenlabs (>=2.15.0,<3.0.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "certifi (==2025.8.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "pydantic (==2.11.9)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.1)",
    "sniffio (==1.3.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "websockets (==15.0.1)",
    "requests (>=2.25.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
